fix unsdg squares overflow

--- a/styles/unsdg_squares.css
+++ b/styles/unsdg_squares.css
@@ -4,6 +4,7 @@
     display: flex;
     height: 70px;
     justify-content: center;
+    overflow-x: hidden;
 }
 
 .unsdg-squares img {
@@ -32,5 +33,9 @@
     .unsdg-squares {
         height: 10vw;
         margin-top: 0;
+    }
+
+    .unsdg-squares img {
+        height: 10vw;
     }
 }
